Initial change for the graph comparison tool.